Revision history for Perl extension Data-Gimei

{{$NEXT}}

    - change OO systems Moo -> Class::Tiny
    - organize modules
    - update cpanfile
    - use VERSION instead of use feature.

v0.0.7 2022-05-06T05:47:29Z

    - remove unused modules

v0.0.6 2022-04-07T05:28:50Z

    - remove requirements of perl version on develop
    - Add test case to t/address.t
    - Add handling of load error

v0.0.5 2022-02-04T08:29:01Z

    - change requirements of perl version

v0.0.4 2022-01-11T08:29:51Z

    - Introduce Address
    - Introduce Deteministic random
    - Change License

v0.0.3

    - Support Romaji
    - Introduce param 'gender' to new()
    - Split .pm files by package

v0.0.2

    - Change YAML module to YAML::XS.

v0.0.1

    - original version